package com.example.analyzer.model.domain;

/** Structural kind of a Java type declaration. */
public enum TypeKind {
    CLASS,
    INTERFACE,
    ENUM,
    ANNOTATION,
    RECORD
}
